--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
   "dependencies": {
     "gatsby": "^4.24.0",
     "react": "^18.1.0",
-    "react-dom": "^18.1.0"
+    "react-dom": "^18.1.0",
+    "node-sass": "^7.0.1"
   },
   "devDependencies": {
     "@emotion/react": "^11.10.4",
